--- a/firstexercise/fwb.html
+++ b/firstexercise/fwb.html
@@ -69,10 +69,29 @@
  <iframe class="vid" src="https://www.youtube.com/embed/c4JDKTA2C0U" allowfullscreen height="360" width="480"></iframe>
 </div>
 <div class="right1">
-Right Column
-<div><section class="sec1">part1</section></div>
-<div><section class="sec2">part2</section></div>
-<div><section class="sec3">part3</section></div>
+<div>
+<article class="sec1" >
+<a href="http://www.investopedia.com/advisor-network/articles/how-financially-prepare-market-downturn">How to Financially Prepare for a Market Downturn</a>
+<br>
+Regardless of the president's promises, a market downturn will occur, and you should be prepared...
+</article>
+ </div>
+ <div>
+ <article class="sec2" >
+<a href="http://www.investopedia.com/advisor-network/articles/investing-within-your-risk-tolerance-comfort-zone">
+Investing within your Risk Tolerance comfort zone </a>
+<br>
+Investing within your risk tolerance comfort zone can keep you from making bad decisions...
+</article>
+ </div>
+<div>
+ <article class="sec3" >
+<a href="http://www.investopedia.com/advisor-network/articles/sensible-approach-allocating-wealth/">A Sensible Approach to Allocating Wealth</a>
+<br>
+Allocating wealth involves protecting lifestyle over the long term and wealth creation....
+</article>
+ </div>
+
 </div>
 
 </div>
