--- a/firstexercise/fwb.html
+++ b/firstexercise/fwb.html
@@ -6,7 +6,9 @@
 <head>
 <link rel="stylesheet" type="text/css"  href="styles.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+<link href="960.css" rel="stylesheet" />
+<link href="reset.css" rel="stylesheet" />
+<link href="text.css" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/960gs/0/960.min.css" rel="stylesheet">
 </head>
