--- a/firstexercise/fwb.html
+++ b/firstexercise/fwb.html
@@ -1,9 +1,9 @@
-
 <!Doctype html>
 <html>
+<head>
 <title>My first Website</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<head>
+
 <link rel="stylesheet" type="text/css"  href="styles.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="960.css" rel="stylesheet" />
@@ -21,7 +21,7 @@
 <div class="container_12">
 <nav class="fix_nav">
 
-<img  class="grid_2 main1" src="mystock.png" width="200" height="90" />
+<img  class="grid_2 main1" src="mystock.png" alt="mystock" width="200" height="90" />
 <div class="grid_10 topnav">
 
 
@@ -39,45 +39,36 @@
 <section class="grid_4">
 
 <img src="download.jpg" alt="graph"/>
-<a href="https://www.kotaksecurities.com/ksweb/Research/Investment-Knowledge-Bank/how-share-market-works" >how it works</a>
+<h3><a href="https://www.kotaksecurities.com/ksweb/Research/Investment-Knowledge-Bank/how-share-market-works" >how it works</a></h3>
 </section>
 <section class="grid_4">
-<img src="download1.jpg">
-  <a href="http://economictimes.indiatimes.com/markets" >share updates</a>
+<img src="download1.jpg" alt="download1">
+  <h3><a href="http://economictimes.indiatimes.com/markets" >share updates</a></h3>
 
 </section>
 <section class="grid_4">
 
-<img src="download2.jpg" alt="download2"/>
+<h3><img src="download2.jpg" alt="download2"/></h3>
 
 </section>
 
  <img class="grid_12" src="image.gif" alt="download3">
 	
-<!-- <div class="grid_6">
 
-<h1>Second</h1>
-
-</div>
-<div class="grid_6">
-
-<h1>Third</h1>
-
-</div> -->
 <div class="left1">
  <iframe class="vid" src="https://www.youtube.com/embed/c4JDKTA2C0U" allowfullscreen height="360" width="480"></iframe>
 </div>
 <div class="right1">
 <div>
 <article class="sec1" >
-<a href="http://www.investopedia.com/advisor-network/articles/how-financially-prepare-market-downturn"><h3>How to Financially Prepare for a Market Downturn</a></h3>
+<h3><a href="http://www.investopedia.com/advisor-network/articles/how-financially-prepare-market-downturn">How to Financially Prepare for a Market Downturn</a></h3>
 Regardless of the president's promises, a market downturn will occur, and you should be prepared...
 </article>
  </div>
  <div>
  <article class="sec2" >
-<a href="http://www.investopedia.com/advisor-network/articles/investing-within-your-risk-tolerance-comfort-zone">
-<h3>Investing within your Risk Tolerance comfort zone </a></h3>
+<h3><a href="http://www.investopedia.com/advisor-network/articles/investing-within-your-risk-tolerance-comfort-zone">
+Investing within your Risk Tolerance comfort zone </a></h3>
 Investing within your risk tolerance comfort zone can keep you from making bad decisions...
 </article>
  </div>
@@ -92,7 +83,7 @@ Allocating wealth involves protecting lifestyle over the long term and wealth cr
 
 </div>
 
- </body>
+ 
 
 <footer class="foot">
 
@@ -103,5 +94,5 @@ Allocating wealth involves protecting lifestyle over the long term and wealth cr
   <p>Contact information: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=someone@example.com&su=SUBJECT&body=BODY&bcc=someone.else@example.com
 
 ">abc@gmail.com</a>.</p>
-</footer>
+</footer></body>
 </html>
