--- a/firstexercise/fwb.html
+++ b/firstexercise/fwb.html
@@ -1,6 +1,8 @@
+
 <!Doctype html>
 <html>
 <head>
+
 <title>My first Website</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
@@ -12,16 +14,12 @@
 <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/960gs/0/960.min.css" rel="stylesheet">
 </head>
-
-
-  
-
  <body>
- 	
+  
 <div class="container_12">
 <nav class="fix_nav">
 
-<img  class="grid_2 main1" src="mystock.png" alt="mystock" width="200" height="90" />
+<img  class="grid_2 main1" src="mystock.png"  alt="mystock"/>
 <div class="grid_10 topnav">
 
 
@@ -35,64 +33,64 @@
 
   </div>
   </nav>
-<br><br><br><br><br>
+
+<div class="top-part">
 <section class="grid_4">
 
 <img src="download.jpg" alt="graph"/>
-<h3><a href="https://www.kotaksecurities.com/ksweb/Research/Investment-Knowledge-Bank/how-share-market-works" >how it works</a></h3>
+<a href="https://www.kotaksecurities.com/ksweb/Research/Investment-Knowledge-Bank/how-share-market-works" ><h5>How it Works?</h5></a>
 </section>
 <section class="grid_4">
-<img src="download1.jpg" alt="download1">
-  <h3><a href="http://economictimes.indiatimes.com/markets" >share updates</a></h3>
+<img src="download1.jpg" alt="live-updates">
+  <a href="http://economictimes.indiatimes.com/markets" ><h5>Live Updates</h5></a>
 
 </section>
 <section class="grid_4">
 
-<h3><img src="download2.jpg" alt="download2"/></h3>
-
+<img src="download2.jpg" alt="download2"/>
+ <a href="https://www.blackrock.com/investing/insights/investment-outlook" ><h5>StockMarket Reviews</h5></a>
 </section>
-
- <img class="grid_12" src="image.gif" alt="download3">
-	
-
-<div class="left1">
- <iframe class="vid" src="https://www.youtube.com/embed/c4JDKTA2C0U" allowfullscreen height="360" width="480"></iframe>
+</div>
+ <img class="grid_12 middle-part" src="bse.jpg" alt="download3">    
+  <div class="left1">
+ <iframe class="vid" src="https://www.youtube.com/embed/c4JDKTA2C0U" allowfullscreen ></iframe>
 </div>
 <div class="right1">
-<div>
-<article class="sec1" >
-<h3><a href="http://www.investopedia.com/advisor-network/articles/how-financially-prepare-market-downturn">How to Financially Prepare for a Market Downturn</a></h3>
+
+<section class="sec1" ><h3>
+<a href="http://www.investopedia.com/advisor-network/articles/how-financially-prepare-market-downturn">How to Financially Prepare for a Market Downturn</a></h3>
 Regardless of the president's promises, a market downturn will occur, and you should be prepared...
-</article>
- </div>
- <div>
- <article class="sec2" >
+</section>
+ 
+ <section class="sec2" >
 <h3><a href="http://www.investopedia.com/advisor-network/articles/investing-within-your-risk-tolerance-comfort-zone">
 Investing within your Risk Tolerance comfort zone </a></h3>
 Investing within your risk tolerance comfort zone can keep you from making bad decisions...
-</article>
- </div>
-<div>
- <article class="sec3" >
-<a href="http://www.investopedia.com/advisor-network/articles/sensible-approach-allocating-wealth/"><h3>A Sensible Approach to Allocating Wealth</h3></a>
+</section>
+
+
+ <section class="sec3" >
+<h3><a href="http://www.investopedia.com/advisor-network/articles/sensible-approach-allocating-wealth/">A Sensible Approach to Allocating Wealth</a>
+</h3>
 Allocating wealth involves protecting lifestyle over the long term and wealth creation....
-</article>
- </div>
-
+</section>
+ 
 </div>
 
-</div>
+
 
  
 
-<footer class="foot">
+<footer class="grid_12 foot">
 
-<i class="fa fa-google-plus-official" aria-hidden="true" >gooleplus</i>&amp;
-<i class="fa fa-twitter" aria-hidden="true">twitter</i>&amp;
-<i class="fa fa-youtube" aria-hidden="true">youtube</i>&amp;
-<i class="fa fa-facebook" aria-hidden="true">facebook</i>
+<span><a href="https://www.googleplus.com"><i class="fa fa-google-plus-official" aria-hidden="true" ></i></a> </span>
+<span><a href="https://www.twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i></a> </span>
+<span><a href="https://www.youtube.com"><i class="fa fa-youtube" aria-hidden="true"></i></a> </span>
+<span><a href="https://www.facebook.com"><i class="fa fa-facebook" aria-hidden="true"></i></a></span>
   <p>Contact information: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=someone@example.com&su=SUBJECT&body=BODY&bcc=someone.else@example.com
 
 ">abc@gmail.com</a>.</p>
-</footer></body>
+</footer>
+</div>
+</body>
 </html>
