footer section aligned

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
  
 
 <footer class="grid_12 foot">
-
+Contact us on:
   <span><a href="https://www.googleplus.com" class="fa fa-google-plus-official fa-2x" aria-hidden="true" ></a> </span>
   <span><a href="https://www.twitter.com" class="fa fa-twitter fa-2x" aria-hidden="true"></a> </span>
   <span><a href="https://www.youtube.com" class="fa fa-youtube fa-2x" aria-hidden="true"></a> </span>
